syntax = "proto3";

package NAlice.NScenarios.NContacts;

option java_package = "ru.yandex.kronstadt.alice.scenarios.contacts.proto";
option java_multiple_files = true;

import "mapreduce/yt/interface/protos/extension.proto";

message TUploadContactsApplyArgs {
}

message TContactsScenarioData {
  option (NYT.default_field_flags) = SERIALIZATION_YT;
  // contactsDeviceData map by uuid
  map<string, TContactsDeviceData> ContactsDeviceData = 1 [json_name = "contacts_device_data", (NYT.column_name) = "contacts_device_data"];
}

message TContactsDeviceData {
  option (NYT.default_field_flags) = SERIALIZATION_YT;

  uint64 LastSyncKey = 1 [json_name = "last_sync_key", (NYT.column_name) = "last_sync_key"];
}